# bazel-pyhon-go

./: BUILD.bazel  README.md  WORKSPACE.bazel  gazelle_python.yaml  go.mod  requirements_lock.txt
projects/go_server/: BUILD.bazel  main.go
projects/python_server/: BUILD.bazel  __main__.py
